--- a/Assets/Scenes/Boss_Flogas.yaml
+++ b/Assets/Scenes/Boss_Flogas.yaml
@@ -66,7 +66,7 @@ GameObjects:
     Com_Transform:
       Translation: [-5.5, 0, -0.600000024]
       Rotation: [0, -0, 0]
-      Scale: [1.2, 1.2, 1.2]
+      Scale: [1.20000005, 1.20000005, 1.20000005]
     Com_Collider:
       Center: [0, 0, 0]
       Type: Capsule
@@ -83,9 +83,9 @@ GameObjects:
         CharacterController: true
     Com_OBB:
       Center: [0, 0, 0]
-      Size: [0.150000006, 0.150000006, 0.150000006]
-      IsAttach: false
-      BoneName: ""
+      Size: [0.5, 0.5, 0.5]
+      IsAttach: true
+      BoneName: Root
       Offset: [-0.0500000007, 0.25, 0]
       CollisionType: 2
     Com_Model:
@@ -114,7 +114,7 @@ GameObjects:
     Com_Transform:
       Translation: [6, 0, -1]
       Rotation: [0, -0, 0]
-      Scale: [1.2, 1.2, 1.2]
+      Scale: [1.20000005, 1.20000005, 1.20000005]
     Com_Collider:
       Center: [0, 0, 0]
       Type: Capsule
@@ -131,9 +131,9 @@ GameObjects:
         CharacterController: true
     Com_OBB:
       Center: [0, 0, 0]
-      Size: [0.150000006, 0.150000006, 0.150000006]
-      IsAttach: false
-      BoneName: ""
+      Size: [0.5, 0.5, 0.5]
+      IsAttach: true
+      BoneName: Root
       Offset: [-0.0500000007, 0.25, 0]
       CollisionType: 2
     Com_Model:
@@ -162,7 +162,7 @@ GameObjects:
     Com_Transform:
       Translation: [-5.80000019, 0, -8.5]
       Rotation: [0, -0, 0]
-      Scale: [1.2, 1.2, 1.2]
+      Scale: [1.20000005, 1.20000005, 1.20000005]
     Com_Collider:
       Center: [0, 0, 0]
       Type: Capsule
@@ -179,9 +179,9 @@ GameObjects:
         CharacterController: true
     Com_OBB:
       Center: [0, 0, 0]
-      Size: [0.150000006, 0.150000006, 0.150000006]
-      IsAttach: false
-      BoneName: ""
+      Size: [0.5, 0.5, 0.5]
+      IsAttach: true
+      BoneName: Root
       Offset: [-0.0500000007, 0.25, 0]
       CollisionType: 2
     Com_Model:
@@ -210,7 +210,7 @@ GameObjects:
     Com_Transform:
       Translation: [5.80000019, 0, -8.80000019]
       Rotation: [0, -0, 0]
-      Scale: [1.2, 1.2, 1.2]
+      Scale: [1.20000005, 1.20000005, 1.20000005]
     Com_Collider:
       Center: [0, 0, 0]
       Type: Capsule
@@ -227,9 +227,9 @@ GameObjects:
         CharacterController: true
     Com_OBB:
       Center: [0, 0, 0]
-      Size: [0.150000006, 0.150000006, 0.150000006]
-      IsAttach: false
-      BoneName: ""
+      Size: [0.5, 0.5, 0.5]
+      IsAttach: true
+      BoneName: Root
       Offset: [-0.0500000007, -0.25, 0]
       CollisionType: 2
     Com_Model:
