--- a/Assets/Scenes/TestRoomLee.yaml
+++ b/Assets/Scenes/TestRoomLee.yaml
@@ -228,8 +228,8 @@ GameObjects:
       SpriteTotal: 0
       SpriteSpeed: 5
       OffsetColor: [0.384057999, 0.356999993, 0.470999986, 0.800000012]
-  - Name: E_MeteoDropAfter
-    UUID: 17209350454000944646
+  - Name: E_IIBlood
+    UUID: 12569516535572226087
     Active: true
     Layer: Default
     Instancing: false
@@ -237,14 +237,62 @@ GameObjects:
     PassIndex: 0
     BillBord: false
     Com_Transform:
-      Translation: [-0.818804622, 0, -1.54043305]
+      Translation: [-0.121509969, 0.369528085, -1.80380046]
+      Rotation: [-166.09024, 5.90100288, -179.999893]
+      Scale: [0.99855417, 1.0005976, 1.0012449]
+    Com_RectInstance:
+      Shape: 1
+      InstNum: 100
+      Color: [0.674284816, 0.00517028384, 0, 0]
+      Speed: 1.79999995
+      LifeTime: 2.0999999
+      Size: 0.699999988
+      StartRadian: 1.5
+      RadiationAngle: 50
+      LerpColor: true
+      SrcColor: [0.753623188, 0.0327662192, 0, 0]
+      DestColor: [0.659420252, 0, 0, 0]
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\001.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_blood_005_TEX_CJH_1.png
+      TextureNoisePath: ""
+      TextureNormalPath: ""
+      ScrollSpeedX: [2.29999995, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0
+      DistortionBias: 0
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      OffsetColor: [0, 0, 0, 0]
+  - Name: E_MeteoDropAfter
+    UUID: 15159987855506597533
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 0
+    BillBord: false
+    Com_Transform:
+      Translation: [0, 0, 0]
       Rotation: [0, -0, 0]
-      Scale: [1.20000005, 0.100000001, 1.20000005]
+      Scale: [1.20000005, 0.699999988, 1.20000005]
     Com_Decal:
       {}
     Effect_Setting:
       TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\019.dds
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_blood_005_TEX_CJH_1.png
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Impact_006_TEX_KKJ.png
       TextureNoisePath: ""
       TextureNormalPath: ""
       ScrollSpeedX: [0, 0, 0]
@@ -254,7 +302,7 @@ GameObjects:
       Distortion3: [0.100000001, 0.100000001]
       DistortionScale: 0.800000012
       DistortionBias: 0.5
-      FadeOut: false
+      FadeOut: true
       FadeOutDuration: 2
       FadeOutStratTime: 0
       FadeIn: false
