--- a/Assets/Scenes/m_pxVertices2.yaml
+++ b/Assets/Scenes/m_pxVertices2.yaml
@@ -142,8 +142,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-3.88122892, 0.308779508, 0.522710443]
-      Rotation: [19.7805653, 7.41409636, -2.15242835e-07]
-      Scale: [0.816467524, 0.873787522, 0.879677653]
+      Rotation: [-176.505478, -89.7638092, -179.999985]
+      Scale: [0.815932572, 0.872475624, 0.877416074]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -181,7 +181,7 @@ GameObjects:
     Com_Transform:
       Translation: [-3.45907974, 2.72718154e-07, 4.04530668]
       Rotation: [0, -0, -90]
-      Scale: [1, 1.10000002, 1.09867549]
+      Scale: [1, 1.10000002, 1.09867537]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Effect\
       MeshFileName: untitled.fbx
