--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -386,7 +386,7 @@
       <Filter>05.Effect\PlayerEffect\AuraEffect</Filter>
     </ClInclude>
     <ClInclude Include="..\Public\EffectRockDust.h">
-      <Filter>05.Effect\Instance\RockDust</Filter>
+      <Filter>05.Effect\Ursa\Rock\RockDust</Filter>
     </ClInclude>
     <ClInclude Include="..\Public\FlyLight.h">
       <Filter>05.Effect\FlogasDungeon\Fly</Filter>
@@ -420,6 +420,12 @@
     </ClInclude>
     <ClInclude Include="..\Public\EffectSoilDust.h">
       <Filter>05.Effect\Ursa\Dust</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Public\EffectDropRock.h">
+      <Filter>05.Effect\Ursa\Rock</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Public\DropRockSmall.h">
+      <Filter>02.GameObjects\Map\Rock</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -790,7 +796,7 @@
       <Filter>05.Effect\PlayerEffect\AuraEffect</Filter>
     </ClCompile>
     <ClCompile Include="..\Private\EffectRockDust.cpp">
-      <Filter>05.Effect\Instance\RockDust</Filter>
+      <Filter>05.Effect\Ursa\Rock\RockDust</Filter>
     </ClCompile>
     <ClCompile Include="..\Private\Scene_GamePlay.cpp">
       <Filter>01.Scenes\GamePlay</Filter>
@@ -827,6 +833,12 @@
     </ClCompile>
     <ClCompile Include="..\Private\EffectUrsaDust.cpp">
       <Filter>05.Effect\Ursa\Dust</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\EffectDropRock.cpp">
+      <Filter>05.Effect\Ursa\Rock</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\DropRockSmall.cpp">
+      <Filter>02.GameObjects\Map\Rock</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1228,9 +1240,6 @@
     <Filter Include="05.Effect\PlayerEffect\AuraEffect">
       <UniqueIdentifier>{a6f523b4-a235-4b65-abe0-95078fca832e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="05.Effect\Instance\RockDust">
-      <UniqueIdentifier>{9cd9a968-a044-4812-891a-e208a8af8dbb}</UniqueIdentifier>
-    </Filter>
     <Filter Include="97.Manager\ThreadPool">
       <UniqueIdentifier>{d9fbb0a9-0f8d-454d-8ef7-21d4bb5c9b71}</UniqueIdentifier>
     </Filter>
@@ -1254,6 +1263,12 @@
     </Filter>
     <Filter Include="05.Effect\Ursa\Dust">
       <UniqueIdentifier>{e0a1b44a-3649-4c35-8b58-d494aa575171}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\Ursa\Rock">
+      <UniqueIdentifier>{1180137d-b07b-4ef0-b482-7fd4f1e33f52}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\Ursa\Rock\RockDust">
+      <UniqueIdentifier>{9cd9a968-a044-4812-891a-e208a8af8dbb}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
