--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -421,6 +421,12 @@
     <ClInclude Include="..\Public\EffectSoilDust.h">
       <Filter>05.Effect\Ursa\Dust</Filter>
     </ClInclude>
+    <ClInclude Include="..\Public\FootHammer_Bomb.h">
+      <Filter>05.Effect\FlogasDungeon\FootHammer\Bomb</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Public\FootHammer_Decal.h">
+      <Filter>05.Effect\FlogasDungeon\FootHammer\FloorDecal</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp">
@@ -827,6 +833,12 @@
     </ClCompile>
     <ClCompile Include="..\Private\EffectUrsaDust.cpp">
       <Filter>05.Effect\Ursa\Dust</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\FootHammer_Bomb.cpp">
+      <Filter>05.Effect\FlogasDungeon\FootHammer\Bomb</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\FootHammer_Decal.cpp">
+      <Filter>05.Effect\FlogasDungeon\FootHammer\FloorDecal</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1254,6 +1266,15 @@
     </Filter>
     <Filter Include="05.Effect\Ursa\Dust">
       <UniqueIdentifier>{e0a1b44a-3649-4c35-8b58-d494aa575171}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\FlogasDungeon\FootHammer">
+      <UniqueIdentifier>{756e2d84-0918-4cb9-ae8f-0d77066b7e4e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\FlogasDungeon\FootHammer\Bomb">
+      <UniqueIdentifier>{674e05b5-44da-4af8-919a-02fc8f0c7c00}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\FlogasDungeon\FootHammer\FloorDecal">
+      <UniqueIdentifier>{6bbce7a7-4767-482f-9e11-adc5ccbae1cf}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
