--- a/Assets/Scenes/BossSY.yaml
+++ b/Assets/Scenes/BossSY.yaml
@@ -30,12 +30,31 @@ GameObjects:
     PassIndex: 0
     NumOBB: 0
     Com_Transform:
-      Translation: [0, 0, 0]
+      Translation: [-2.70000005, 0, 0]
       Rotation: [0, -0, 0]
-      Scale: [0.0799999982, 0.0500000007, 0.0799999982]
+      Scale: [0.0399999991, 0.0500000007, 0.0799999982]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Rock\
       MeshFileName: DropRock.fbx
+      HasCollider: false
+      Equipment: false
+    RenderGroup: 1
+    FrustumRange: 1
+  - Name: Empty Object
+    UUID: 11535172414627239501
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Object
+    PassIndex: 0
+    NumOBB: 0
+    Com_Transform:
+      Translation: [0, 0.00596779585, 0]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Map\Tile\
+      MeshFileName: Tile16.fbx
       HasCollider: false
       Equipment: false
     RenderGroup: 1
